WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227806
Fix some whitespace handling issues in URL setters
https://bugs.webkit.org/show_bug.cgi?id=227806
Summary
Fix some whitespace handling issues in URL setters
Alex Christensen
Reported
2021-07-08 11:50:47 PDT
Fix some whitespace handling issues in URL setters
Attachments
Patch
(36.23 KB, patch)
2021-07-08 11:54 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(36.34 KB, patch)
2021-07-08 12:01 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(35.52 KB, patch)
2021-07-08 14:20 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-07-08 11:54:56 PDT
Created
attachment 433150
[details]
Patch
Alex Christensen
Comment 2
2021-07-08 12:01:33 PDT
Created
attachment 433152
[details]
Patch
Alex Christensen
Comment 3
2021-07-08 14:20:22 PDT
Created
attachment 433163
[details]
Patch
Chris Dumez
Comment 4
2021-07-08 15:35:48 PDT
Comment on
attachment 433163
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=433163&action=review
> Source/WebCore/html/URLDecomposition.cpp:176 > + for (size_t i = 0; i < string.length(); ++i) {
could use unsigned instead of size_t since that's what string.length() returns.
EWS
Comment 5
2021-07-08 16:00:08 PDT
Committed
r279760
(
239531@main
): <
https://commits.webkit.org/239531@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 433163
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-07-08 16:01:17 PDT
<
rdar://problem/80347704
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug